# website-with-chatbot

./: .env  .gitignore  README.md  netlify.toml  pyproject.toml
api/: app.py  requirements.txt
frontend/vite-project/: index.html  package-lock.json  package.json
frontend/vite-project/src/: App.css  App.tsx  ChatWindow.tsx
